SERVER-34160 Exit shell cleanly on SIGHUP